# thrift-leaning

./: .gitignore  CMakeLists.txt  main.cpp
client/: main.rb
client/gen-rb/: greeter.rb  hello_constants.rb  hello_types.rb
models/: hello.thrift
models/gen-cpp/: Greeter.cpp  Greeter.h  Greeter_server.skeleton.cpp  hello_constants.cpp  hello_constants.h  hello_types.cpp  hello_types.h
